# PlayWithAlgorithms

./: .gitignore  README.md
02.SelectionBasic/01.SelectionSort/: CMakeLists.txt  SortTestHelper.h  Student.h  main.cpp
02.SortingBasic/: CMakeLists.txt  SortTestHelper.h  main.cpp
02.SortingBasic/01.SelectionSort/: CMakeLists.txt  SelectionSort.h  main.cpp
02.SortingBasic/02.InsertionSort/: CMakeLists.txt  InsertionSort.h  main.cpp
02.SortingBasic/05.MergeSort/: CMakeLists.txt  MergeSort.h  main.cpp
